Adding modifications for currency

--- a/lang/fr.json
+++ b/lang/fr.json
@@ -462,6 +462,9 @@
     "Inventory.Sol": "Sol",
     "Inventory.Caelum": "Caelum",
     "Inventory.Fulgur": "Fulgur",
+    "Inventory.Purse": "Bourse",
+    "Inventory.Stolen": "Volées",
+    "Inventory.Debt": "Dette",
     "Button.Cancel": "Annuler",
     "Button.Continue": "Continuer",
     "Spell.type": "Type",
